--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -417,80 +417,80 @@ main {
                                 display: flex;
                                 align-items: center;
 
-                                .checkbox {
-                                    display: block;
-                                    position: relative;
-                                    height: 24px;
-                                    width: 24px;
-                                    cursor: pointer;
-                                    -webkit-user-select: none;
-                                    -moz-user-select: none;
-                                    -ms-user-select: none;
-                                    user-select: none;
-                                    flex-shrink: 0;
+                                // .checkbox {
+                                //     display: block;
+                                //     position: relative;
+                                //     height: 24px;
+                                //     width: 24px;
+                                //     cursor: pointer;
+                                //     -webkit-user-select: none;
+                                //     -moz-user-select: none;
+                                //     -ms-user-select: none;
+                                //     user-select: none;
+                                //     flex-shrink: 0;
 
-                                    /* Hide the browser's default checkbox */
-                                    input {
-                                        position: absolute;
-                                        opacity: 0;
-                                        cursor: pointer;
-                                        height: 100%;
-                                        width: 100%;
-                                    }
+                                //     /* Hide the browser's default checkbox */
+                                //     input {
+                                //         position: absolute;
+                                //         opacity: 0;
+                                //         cursor: pointer;
+                                //         height: 100%;
+                                //         width: 100%;
+                                //     }
 
-                                    /* Create a custom checkbox */
-                                    .checkmark {
-                                        position: absolute;
-                                        top: 0;
-                                        left: 0;
-                                        height: 100%;
-                                        width: 100%;
-                                        background-color: #fff;
-                                        border: 1px $checkbox-empty-color solid;
-                                        border-radius: 8px;
-                                    }
+                                //     /* Create a custom checkbox */
+                                //     .checkmark {
+                                //         position: absolute;
+                                //         top: 0;
+                                //         left: 0;
+                                //         height: 100%;
+                                //         width: 100%;
+                                //         background-color: #fff;
+                                //         border: 1px $checkbox-empty-color solid;
+                                //         border-radius: 8px;
+                                //     }
 
-                                    /* On mouse-over, add a background color */
-                                    &:hover input~.checkmark {
-                                        // background-color: $main-color-light;
-                                        // border: 1px $main-color solid;
-                                    }
+                                //     /* On mouse-over, add a background color */
+                                //     &:hover input~.checkmark {
+                                //         // background-color: $main-color-light;
+                                //         // border: 1px $main-color solid;
+                                //     }
 
-                                    /* When the checkbox is checked, add a background */
-                                    input:checked~.checkmark {
-                                        background-color: $main-color;
-                                        border: 1px $main-color solid;
-                                    }
+                                //     /* When the checkbox is checked, add a background */
+                                //     input:checked~.checkmark {
+                                //         background-color: $main-color;
+                                //         border: 1px $main-color solid;
+                                //     }
 
-                                    /* When the checkbox is checked, add a background */
-                                    input:checked:hover~.checkmark {
-                                        // background-color: red;
-                                        // border: 1px red solid;
-                                    }
+                                //     /* When the checkbox is checked, add a background */
+                                //     input:checked:hover~.checkmark {
+                                //         // background-color: red;
+                                //         // border: 1px red solid;
+                                //     }
 
-                                    /* Create the checkmark/indicator (hidden when not checked) */
-                                    .checkmark:after {
-                                        content: "";
-                                        position: absolute;
-                                        display: none;
-                                    }
+                                //     /* Create the checkmark/indicator (hidden when not checked) */
+                                //     .checkmark:after {
+                                //         content: "";
+                                //         position: absolute;
+                                //         display: none;
+                                //     }
 
-                                    /* Show the checkmark when checked */
-                                    input:checked~.checkmark:after {
-                                        display: block;
-                                    }
+                                //     /* Show the checkmark when checked */
+                                //     input:checked~.checkmark:after {
+                                //         display: block;
+                                //     }
 
-                                    /* Style the checkmark/indicator */
-                                    .checkmark:after {
-                                        left: 7px;
-                                        top: 3px;
-                                        width: 5px;
-                                        height: 12px;
-                                        border: solid white;
-                                        border-width: 0 3px 3px 0;
-                                        transform: rotate(40deg);
-                                    }
-                                }
+                                //     /* Style the checkmark/indicator */
+                                //     .checkmark:after {
+                                //         left: 7px;
+                                //         top: 3px;
+                                //         width: 5px;
+                                //         height: 12px;
+                                //         border: solid white;
+                                //         border-width: 0 3px 3px 0;
+                                //         transform: rotate(40deg);
+                                //     }
+                                // }
 
                                 .label-text {
                                     display: inline-block;
