fix awarded section margin

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -657,7 +657,7 @@ main {
     }
 
     .awarded {
-        // margin: 25px 25px 50px 25px;
+        margin: 25px 25px 50px 25px;
 
         .result {
             .top {
